Quick scrollbar fix

--- a/WebContent/css/scrolling.css
+++ b/WebContent/css/scrolling.css
@@ -202,10 +202,15 @@ html {
 
 /* Standardize scrollbars */
 
-::-webkit-scrollbar:horizontal {
+::-webkit-scrollbar{
     font-size: 15pt;
     width: 16px;
     color: #888;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 0px;
+    background: transparent;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
@@ -217,3 +222,5 @@ html {
     background-clip: initial;
     -webkit-box-shadow: inset 0 0 0.4em rgba(0,0,0,0.3);
 }
+
+
